<resources>
    <string name="app_name">MyMemory</string>
    <string name="create_memory">Create memory</string>
    <string name="memories">My memories</string>
    <string name="quote">Quote</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_memory_detail">My memories</string>
    <string name="quote_of_the_day">Quote of the day:</string>
    <string name="date">Date:</string>
    <string name="title">Title</string>
    <string name="memory">Memory</string>
    <string name="save">Save</string>
    <string name="delete_all_memories">Delete All Memories</string>
    <string name="load_sample_memories">load sample memories</string>
    <string name="back">Back</string>
</resources>
