<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

    <EditText
            android:id="@+id/edit_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:inputType="textMultiLine"
            tools:text="@tools:sample/full_names"/>

    <EditText
            android:id="@+id/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/memory"
            android:inputType="text"
            tools:text="@tools:sample/full_names"/>



    <TextView
            android:id="@+id/quoteOfTheDay"
            android:text="@string/quote_of_the_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Medium"
            />

    <TextView
            android:id="@+id/quoteText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@tools:sample/full_names"
    />

    <TextView
            android:id="@+id/dateOfToday"
            android:text="@string/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Medium"
    />
    <TextView
            android:id="@+id/memoryDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@tools:sample/date/ddmmyy"
    />



</LinearLayout>
